# aocd2023day01_cppbuild

./: .gitignore  CMakeLists.txt  LICENCE  README.md  solver.cpp  solver1.cpp  solver2.cpp  solverlib.cpp  solverlib.h  solverlib.hpp  solvertest.cpp
source/: solver.cpp  solverlib.cpp
test/: CMakeLists.txt
test/source/: solvertest.cpp
